prod build, added work break in css to force a break when nicknames are too long

--- a/src/res/css/app.css
+++ b/src/res/css/app.css
@@ -92,8 +92,7 @@
 }
 
 .spotdetail-customer-name {
-	/*float: left;
-	margin-right: 3px;*/
+	word-break: break-word
 }
 
 .spotdetail-customer-flag {
