--- a/src/res/css/app.css
+++ b/src/res/css/app.css
@@ -261,16 +261,48 @@
 }
 
 .requestitem-wrapper {
-	border: 1px solid #C3C3C3;
-	background-color: #c3c3c3;
-	border-radius: 0.5em;
-	margin: 1em;
-	padding: 1em;
+	/*border: 1px solid #C3C3C3;*/
+	/*background-color: #c3c3c3;*/
+	/*border-radius: 0.5em;*/
+	margin: 1em;	
 	color: black;
 }
 
+.requestitem-spot {
+	border: 1px solid #000;
+	background-color: #4975A2;
+	margin-right: 1em;
+	padding: 0.5em;
+	border-radius: 0.5em;
+	width: 20%;
+	word-break: break-word;
+}
+
+.requestitem-customer {
+	border: 1px solid #000;
+	background-color: #C6D7E9;
+	background-image: url('../images/order.png');
+	background-repeat: no-repeat;
+	background-position: left center;
+	background-size: 30px;
+	margin-right: 1em;
+	padding: 0.5em;
+	padding-left: 1.5em;
+	border-radius: 0.5em;
+	width: 65%;
+}
+
+.requestitem-time {
+	border: 1px solid #000;
+	background-color: #DFE8CB;
+	padding: 0.5em;
+	padding-left: 1.5em;
+	border-radius: 0.5em;
+	width: 15%;
+}
+
 .requestitem-wrapper-pressed {
-	background-color: #F5B800;
+	/*background-color: #F5B800;*/
 	color: white;
 }
 
