--- a/src/res/css/app-default.scss
+++ b/src/res/css/app-default.scss
@@ -341,6 +341,71 @@
   -webkit-animation-duration: 1s; 
 }
 
+/* history view */
+.historyitem-container {
+	margin: 0.3em;
+}
+
+.historyitem-wrapper {
+	/*border: 1px solid #C3C3C3;*/
+	/*background-color: #c3c3c3;*/
+	/*border-radius: 0.5em;*/
+	margin: 1em;	
+	color: black;
+}
+
+.historyitem-spot {
+	border: 1px solid #000;
+	background-color: #4975A2;
+	margin-right: 0.5em;
+	padding: 0.5em;
+	border-radius: 0.5em;
+	width: 20%;
+	word-break: break-word;
+}
+
+.historyitem-customer {
+	border: 1px solid #000;
+	background-color: #C6D7E9;
+	/*background-image: url('../images/order.png');*/
+	background-repeat: no-repeat;
+	background-position: 0.3em 50%;
+	background-size: 30px;
+	margin-right: 0.5em;
+	padding: 0.5em;
+	/*padding-left: 2em;*/
+	border-radius: 0.5em;
+	width: 20%;
+}
+
+.historyitem-time {
+	border: 1px solid #000;
+	background-color: #DFE8CB;
+	background-image: url('../images/time.png');
+	background-repeat: no-repeat;
+	background-position: 0.3em 50%;
+	background-size: 30px;
+	margin-right: 0.5em;
+	padding: 0.5em;
+	padding-left: 2em;
+	border-radius: 0.5em;
+	width: 15%;
+}
+
+.historyitem-total {
+	border: 1px solid #000;
+	background-color: #D0F5A9;
+	background-repeat: no-repeat;
+	background-position: 0.3em 50%;
+	background-size: 30px;
+	padding: 0.5em;
+	border-radius: 0.5em;
+	width: 10%;
+}
+
+.historyitem-wrapper-pressed {
+	color: white;
+}
 
 /* connections status indicator in bottom toolbar */
 
