--- a/src/res/css/app-default.scss
+++ b/src/res/css/app-default.scss
@@ -298,7 +298,7 @@
 	margin-right: 1em;
 	padding: 0.5em;
 	border-radius: 0.5em;
-	width: 20%;
+	/*width: 20%;*/
 	word-break: break-word;
 }
 
@@ -313,7 +313,7 @@
 	padding: 0.5em;
 	padding-left: 2em;
 	border-radius: 0.5em;
-	width: 65%;
+	/*width: 65%;*/
 }
 
 .requestitem-time {
@@ -324,9 +324,9 @@
 	background-position: 0.3em 50%;
 	background-size: 30px;
 	padding: 0.5em;
-	padding-left: 2em;
+	padding-left: 2.5em;
 	border-radius: 0.5em;
-	width: 15%;
+	/*width: 25%;*/
 }
 
 .requestitem-wrapper-pressed {
@@ -360,7 +360,7 @@
 	margin-right: 0.5em;
 	padding: 0.5em;
 	border-radius: 0.5em;
-	width: 20%;
+	/*width: 20%;*/
 	word-break: break-word;
 }
 
@@ -375,7 +375,7 @@
 	padding: 0.5em;
 	/*padding-left: 2em;*/
 	border-radius: 0.5em;
-	width: 20%;
+	/*width: 20%;*/
 }
 
 .historyitem-time {
@@ -387,9 +387,9 @@
 	background-size: 30px;
 	margin-right: 0.5em;
 	padding: 0.5em;
-	padding-left: 2em;
+	padding-left: 2.5em;
 	border-radius: 0.5em;
-	width: 15%;
+	/*width: 15%;*/
 }
 
 .historyitem-total {
@@ -400,7 +400,8 @@
 	background-size: 30px;
 	padding: 0.5em;
 	border-radius: 0.5em;
-	width: 10%;
+	text-align: right;
+	/*width: 10%;*/
 }
 
 .historyitem-wrapper-pressed {
