started implementing notification controller

--- a/src/res/css/app-default.scss
+++ b/src/res/css/app-default.scss
@@ -19,6 +19,8 @@
 /*Include additional icons*/
 @include pictos-iconmask('user');
 @include pictos-iconmask('time');
+@include pictos-iconmask('volume_mute');
+@include pictos-iconmask('volume');
 
 @CHARSET "UTF-8";
 
