changed colours of connection indicator in default scss

--- a/src/res/css/app-default.scss
+++ b/src/res/css/app-default.scss
@@ -462,7 +462,7 @@
 	border-radius: 0.5em;
 	float: right;
 	margin: 0px 0.5em;
-	background-color: gray;
+	background-color: yellow;
 }
 
 .status-indicator .RECONNECT {
@@ -489,7 +489,7 @@
 	border-radius: 0.5em;
 	float: right;
 	margin: 0px 0.5em;
-	background-color: white;
+	background-color: red;
 }
 
 .status-indicator .DISCONNECTED {
